# od-official-server

./: .dockerignore  .env  .gitignore  CONTRIBUTING.md  CONTRIBUTIONS.md  Cargo.toml  Dockerfile  Dockerfile.test  Jenkinsfile  Jenkinsfile.registry  README.md  TESTING.md  build.sh  clippy.toml  compose.ci.yaml  compose.yaml  docker-bake.hcl  launch-scylla-locally.sh  launch-test-env.sh  nohup.out
.github/docs/: CODEOWNERS
.github/workflows/: docker-compose.yml  docker.yml  e2e.yml  linter.yml  miri.yml  rust.yml  shellcheck.yml  unit_tests.yml
api/: Cargo.toml  test.sh
api/src/: main.rs
api/src/api/: cdn.rs  channel.rs  message.rs  mod.rs  roles.rs  server.rs  structures.rs  user.rs
api/src/db/: .statics.rs.swp  mod.rs  prelude.rs  roles.rs  server.rs  statics.rs  structures.rs
api/src/env/: mod.rs
api/src/security/: aes.rs  mod.rs
api/src/tls/: mod.rs
cdn/: Cargo.toml
cdn/src/: main.rs
landing/: package.json
shadow/: e2e.sh  shadow_e2e.sh  test_channel.py  test_spell.py
src/: main.rs
src/api/: channel.rs  friends.rs  invites.rs  message.rs  metrics.rs  mod.rs  prelude.rs  roles.rs  server.rs  spell_caster.rs  statics.rs  structures.rs  user.rs
src/db/: friends.rs  invites.rs  messages.rs  mod.rs  prelude.rs  roles.rs  server.rs  spell_caster.rs  statics.rs  structures.rs  users.rs
src/env/: mod.rs  statics.rs
src/metrics/: prelude.rs
src/security/: aes.rs  messages.rs  mod.rs  structures.rs
src/utils/: logging.rs
test-env-compose/: Dockerfile.test  compose.yaml  grafana.yaml  od-official-server.yaml  scylla.yaml
test-env-compose/e2e/: .gitignore  Dockerfile  base.py  docker-bake.hcl  run_tests.py  test_auth.py  test_message.py  test_roles.py
ws/: Cargo.toml
ws/src/: main.py  (+1 more)
(+3 files in other folders)
