[package]
name = "api"
version = "0.0.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="4.0"}
actix-files = "0.6"
serde = {version="1.0.218", features=["serde_derive"]}
uuid = {version="1.15.1", features=["v7"]}
scylla = {version="1.3.1", features=["chrono-04"]}
sha2 = "0.10.8"
rand = "0.9.0"
env_logger = "0.11.6"
base64 = "0.22.1"
aes = "0.8.4"
cbc = "0.1.2"
hex = "0.4.3"
chrono = {version="0.4", features=["serde"]}
moka = { version = "0.12.11", features = ["future"] }
argon2 = "0.5.3"
rand_core = { version = "0.9.3", features = ["std"] }
password-hash = { version = "0.5.0", features = ["std"] }

# Improves comp time ?
[profile.dev]
opt-level=1

[profile.dev.package."*"]
opt-level=3

[features]
