[package]
name = "api"
version = "0.0.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="4.0", features=["rustls-0_23"]}
actix-files = "0.6"
rustls = "0.23"
tokio-rustls = "0.23"
rustls-pemfile = "2"
serde = {version="1.0.218", features=["serde_derive"]}
uuid = {version="1.15.1", featurs=["v4"]}
scylla = "1.0.0"
sha2 = "0.10.8"
rand = "0.9.0"


[features]
