[package]
name = "cdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="4.0", features=["rustls-0_23"]}
actix-files = "0.6"
rustls = "0.23"
tokio-rustls = "0.23"
rustls-pemfile = "2"

[features]
